test/semantic_error/se_const_var_redef.c0
const int a = 1;
int a;
int main() {}
